--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,50 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+!.mvn/wrapper/maven-wrapper.jar
+*.db
+*.ear
+*.ids
+*.iml
+*.ipr
+*.iws
+*.jar
+*.orig
+*.war
+*iml
+.DS_Store
+.Spotlight-V100
+.Trashes
+._*
+.apt_generated
+.classpath
+.factorypath
+.gradle/**
+.idea
+.idea/**
 .mvn/timing.properties
-
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+.project
+.settings
+.springBeans
+.sts4-cache
+.svn
+/.bundle/
+/.nb-gradle/
+/Gemfile.lock
+/asciidoctor-pdf/
+/build/
+/build/**
+/deploy/**
+/dist/
+/log/**
+/nbbuild/
+/nbdist/
+/nbproject/private/
+/target/
+/target/**
+Thumbs.db
+buildNumber.properties
+dependency-reduced-pom.xml
+pom.xml.next
+pom.xml.releaseBackup
+pom.xml.tag
+pom.xml.versionsBackup
+release.properties
+target/
