--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,46 @@
 
         <plugins>
             <plugin>
+                <groupId>org.jfrog.buildinfo</groupId>
+                <artifactId>artifactory-maven-plugin</artifactId>
+                <version>${artifactory-maven-plugin.version}</version>
+                <inherited>false</inherited>
+                <executions>
+                    <execution>
+                        <id>build-info</id>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+                        <configuration>
+                            <deployProperties>
+                                <build.vcsRevision>{{TRAVIS_COMMIT}}
+                                </build.vcsRevision>
+                            </deployProperties>
+                            <publisher>
+                                <contextUrl>
+                                    https://cloudnativejava.artifactoryonline.com/cloudnativejava
+                                </contextUrl>
+                                <username>${env.ARTIFACTORY_USERNAME}</username>
+                                <password>${env.ARTIFACTORY_PASSWORD}</password>
+                                <repoKey>libs-release-local</repoKey>
+                                <snapshotRepoKey>libs-snapshot-local
+                                </snapshotRepoKey>
+                            </publisher>
+                            <buildInfo>
+                                <agentName>Travis CI</agentName>
+                                <buildNumber>{{TRAVIS_BUILD_NUMBER}}
+                                </buildNumber>
+                                <buildUrl>
+                                    http://travis-ci.org/{{TRAVIS_REPO_SLUG}}/builds/{{TRAVIS_BUILD_ID}}
+                                </buildUrl>
+                                <principal>{{USER}}</principal>
+                                <vcsRevision>{{TRAVIS_COMMIT}}</vcsRevision>
+                            </buildInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
