--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,20 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
+
+        <!-- tag::reactor-blockhound[] -->
         <dependency>
             <groupId>io.projectreactor.tools</groupId>
             <artifactId>blockhound</artifactId>
             <version>1.0.1.RELEASE</version>
         </dependency>
+        <!-- end::reactor-blockhound[] -->
+        <!-- tag::reactor-tools-dependency[] -->
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-tools</artifactId>
         </dependency>
+        <!-- end::reactor-tools-dependency[] -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
